now [pptx,video,flash,pdf,gif] view working

--- a/public/excercise/template/clue-game/index.html
+++ b/public/excercise/template/clue-game/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="">
   <link rel="icon" type="image/png" href="./assets/images/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="./assets/images/favicon-16x16.png" sizes="16x16">
-  <title>ClueOn by Knowledge Platform</title>
+  <title>Tec LMS</title>
   <!-- //-->
 
   <link rel="preload" href="fonts/museosans_300.woff" as="font">
@@ -91,7 +91,7 @@
               "></div>
         </div>
         <div id="creditText" style="font-size: 14px; color: #fff !important; text-align: center">
-          Powered by Knowledge Platform
+          Powered by Tec
         </div>
       </div>
     </div>
